tests/invalid/missing_second_op.c
int main() {
    return 1 + ;
}
// ERROR: Line 2, Error 2009